--- a/accueil.html
+++ b/accueil.html
@@ -266,7 +266,7 @@
 			</div>
 		</div>
 		<div id="gtco-try3">
-		<div class="container py-5">
+			<div class="container py-5">
 				 <!-- IMAGES -->
 				 <div class="py-5">
 					<div class="row animate-box">
@@ -330,55 +330,180 @@
 						</div>
 					</div>
 					<div class="row animate-box">
-					<div class="row">
-					  <!-- IMAGE 1-->
-					  <div class="col-lg-6 mb-3 mb-lg-0">
-						<div class="hover hover-3 text-white rounded"><img src="images/image1A.png" alt="">
+						<div class="row">
+						  <!-- IMAGE 1-->
+						  <div class="col-lg-6 mb-3 mb-lg-0">
+							<div class="hover hover-3 text-white rounded"><img src="images/image1A.png" alt="">
 
-						  <div class="hover-3-content px-5 py-4">
-							<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"> </span></h3>
-						  </div>
-						</div>
-						<p><span class="textcouleurbeige">&Eacute;laboration des logos des outils pour l'interface.</span></p>
-					  </div>
-					  <!-- IMAGE 2-->
-					  <div class="col-lg-6">
-						<div class="hover hover-3 text-white rounded"><img src="images/image1B.png" alt="">
-
-						  <div class="hover-3-content px-5 py-4">
-							<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"></span></h3>
-						  </div>
-						</div>
-						<p><span class="textcouleurbeige">Impl&eacute;mentation de la taille du crayon et du seuil de tol&eacute;rance du sceau.</span></p>
-					  </div>
-					</div>
-					<br>
-					<div class="row">
-					  <!-- IMAGE 3-->
-					  <div class="col-lg-6 mb-3 mb-lg-0">
-						<div class="hover hover-3 text-white rounded"><img src="images/image1C.png" alt="">
-
-						  <div class="hover-3-content px-5 py-4">
-							<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"> </span></h3>
-						  </div>
-						</div>
-						<p><span class="textcouleurbeige">Interface fonctionnelle et respectant le prototype d'interface originel.</span></p>
-					  </div>
-					  <!-- IMAGE 4-->
-					  <div class="col-lg-6">
-						<div class="hover hover-3 text-white rounded"><img src="images/image1D.png" alt="">
-
-						  <div class="hover-3-content px-5 py-4">
-							<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"></span></h3>
+							  <div class="hover-3-content px-5 py-4">
+								<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"> </span></h3>
+							  </div>
 							</div>
+							<p><span class="textcouleurbeige">&Eacute;laboration des logos des outils pour l'interface.</span></p>
+						  </div>
+						  <!-- IMAGE 2-->
+						  <div class="col-lg-6">
+							<div class="hover hover-3 text-white rounded"><img src="images/image1B.png" alt="">
+
+							  <div class="hover-3-content px-5 py-4">
+								<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"></span></h3>
+							  </div>
+							</div>
+							<p><span class="textcouleurbeige">Impl&eacute;mentation de la taille du crayon et du seuil de tol&eacute;rance du sceau.</span></p>
+						  </div>
 						</div>
-						<p><span class="textcouleurbeige">Premier dessin r&eacute;alis&eacute; sur notre application (dessin de Gr&eacute;goire).</span></p>
-					  </div>
+						<br>
+						<div class="row">
+						  <!-- IMAGE 3-->
+						  <div class="col-lg-6 mb-3 mb-lg-0">
+							<div class="hover hover-3 text-white rounded"><img src="images/image1C.png" alt="">
+
+							  <div class="hover-3-content px-5 py-4">
+								<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"> </span></h3>
+							  </div>
+							</div>
+							<p><span class="textcouleurbeige">Interface fonctionnelle et respectant le prototype d'interface originel.</span></p>
+						  </div>
+						  <!-- IMAGE 4-->
+						  <div class="col-lg-6">
+							<div class="hover hover-3 text-white rounded"><img src="images/image1D.png" alt="">
+
+							  <div class="hover-3-content px-5 py-4">
+								<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"></span></h3>
+								</div>
+							</div>
+							<p><span class="textcouleurbeige">Premier dessin r&eacute;alis&eacute; sur notre application (dessin de Gr&eacute;goire).</span></p>
+						  </div>
+					    </div>
+				    </div>
+
+					<div class="row animate-box">
+						<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
+							<br><br>
+							<h2><span class="textcouleurmarron">Approfondissement des algorithmes et de l'interface</span></h2>
+							<p><span class="textgris">Recherche algorithmique et int&eacute;gration des outils</span></p>
+						</div>
 					</div>
-				 </div>
-			  </div>
+
+					<div class="row animate-box">
+						<div class="row">
+						  <!-- IMAGE 1-->
+						  <div class="col-lg-6 mb-3 mb-lg-0">
+							<div class="hover hover-3 text-white rounded"><img src="images/theme.png" alt="">
+
+							  <div class="hover-3-content px-5 py-4">
+								<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"> </span></h3>
+							  </div>
+							</div>
+							<p><span class="textcouleurbeige">&Eacute;laboration des th&egrave;mes pour l'interface.</span></p>
+						  </div>
+						  <!-- IMAGE 2-->
+						  <div class="col-lg-6">
+							<div class="hover hover-3 text-white rounded"><img src="images/popup.png" alt="">
+
+							  <div class="hover-3-content px-5 py-4">
+								<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"></span></h3>
+							  </div>
+							</div>
+							<p><span class="textcouleurbeige">Impl&eacute;mentation des fen&ecirc;tres surgissantes pour les outils.</span></p>
+						  </div>
+						</div>
+						<br>
+						<div class="row">
+						  <!-- IMAGE 3-->
+						  <div class="col-lg-6 mb-3 mb-lg-0">
+							<div class="hover hover-3 text-white rounded"><img src="images/final.png" alt="">
+
+							  <div class="hover-3-content px-5 py-4">
+								<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"> </span></h3>
+							  </div>
+							</div>
+							<p><span class="textcouleurbeige">Interface finale fonctionnelle et respectant le prototype d'interface originel.</span></p>
+						  </div>
+						  <!-- IMAGE 4-->
+						  <div class="col-lg-6">
+							<div class="hover hover-3 text-white rounded"><img src="images/test.png" alt="">
+
+							  <div class="hover-3-content px-5 py-4">
+								<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"></span></h3>
+								</div>
+							</div>
+							<p><span class="textcouleurbeige">Dessin r&eacute;alis&eacute; sur notre application (dessin d'Alexandre).</span></p>
+						  </div>
+					    </div>
+				    </div>
+
+					<div class="row animate-box">
+						<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
+							<br><br>
+							<h2><span class="textcouleurmarron">Derni&egrave;res am&eacute;liorations</span></h2>
+							<p><span class="textgris">Recherche algorithmique pour les filtres et trac&eacute;s</span></p>
+						</div>
+					</div>
+
+					<div class="row animate-box">
+						<div class="row">
+						  <!-- IMAGE 1-->
+						  <div class="col-lg-6 mb-3 mb-lg-0">
+							<div class="hover hover-3 text-white rounded"><img src="images/flou.png" alt="">
+
+							  <div class="hover-3-content px-5 py-4">
+								<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"> </span></h3>
+							  </div>
+							</div>
+							<p><span class="textcouleurbeige">&Eacute;laboration du filtre du flou gaussien.</span></p>
+						  </div>
+						  <!-- IMAGE 2-->
+						  <div class="col-lg-6">
+							<div class="hover hover-3 text-white rounded"><img src="images/detourage.png" alt="">
+
+							  <div class="hover-3-content px-5 py-4">
+								<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"></span></h3>
+							  </div>
+							</div>
+							<p><span class="textcouleurbeige">Impl&eacute;mentation du flitre detourage avec l'aide du filtre flou gaussien.</span></p>
+						  </div>
+						</div>
+						<br>
+						<div class="row">
+						  <!-- IMAGE 3-->
+						  <div class="col-lg-6 mb-3 mb-lg-0">
+							<div class="hover hover-3 text-white rounded"><img src="images/vert.png" alt="">
+
+							  <div class="hover-3-content px-5 py-4">
+								<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"> </span></h3>
+							  </div>
+							</div>
+							<p><span class="textcouleurbeige">Interface fonctionnelle et respectant les nuances de couleur personnalis&eacute;es.</span></p>
+						  </div>
+						  <!-- IMAGE 4-->
+						  <div class="col-lg-6">
+							<div class="hover hover-3 text-white rounded"><img src="images/icones.png" alt="">
+
+							  <div class="hover-3-content px-5 py-4">
+								<h3 class="hover-3-title text-uppercase font-weight-bold mb-1"><span class="font-weight-light"></span></h3>
+								</div>
+							</div>
+							<p><span class="textcouleurbeige">Dessin des icones pour les boutons de notre interface.</span></p>
+						  </div>
+					    </div>
+				    </div>
+
+			     </div>
+			</div>
+			<div class="container py-5">
+				<br><br>
+				<div class="row animate-box">
+					<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
+					<h2><span class="textcouleurbeige">Vid&eacute;o de la r&eacute;alisation de PABLO</span></h2>
+						<div class="gtco-video gtco-bg" style="background-image: url(images/pretzel.png);">
+						<a href="https://youtu.be/phSqqw9EPDI" class="popup-youtube"><i class="icon-video2"></i></a>
+						<div class="overlay"></div>
+					</div>
+				</div>
 			</div>
 		</div>
+	</div>
 	
 	<div id="gtco-counter" class="gtco-bg gtco-counter" style="background-image:url(images/img_bg_05.jpg);">
 		<div class="gtco-container">
