--- a/avancees.html
+++ b/avancees.html
@@ -98,7 +98,7 @@
 	</header>
 
 	</div>
-	<div id= "gtco-try4"">
+	<div id= "gtco-try4">
 	<div class="row">
 		<br><br>
 		<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
@@ -106,34 +106,18 @@
 		</div>
 	</div>
 	<div class="timeline">
-		<div class="coontainer right">
-			<div class="date">fin juin</div>
-			<i class="icon fa fa-gift"></i>
-			<div class="content" style="margin-right: -220px;">
-				<h2><b>In progress...</b></h2>
-				<p>
-					<!--
-					Cr&eacute;ation d'un matchmaking fonctionnel pour le multijoueur.<br>
-					Synchronisation des d&eacute;placements et des attaques.<br>
-					Impl&eacute;mentations d'&eacute;l&eacute;ments relatifs au mode de Jeu.<br>
-					Synchronisation des musiques et des sons entre les clients.<br>
-					Correction des bugs d&eacute;t&eacute;ct&eacute;s.<br>
-					!-->
-				</p>
-			</div>
-		</div>
 		<div class="coontainer left">
 			<div class="date">16 Juin</div>
 			<i class="icon fa fa-home"></i>
 			<div class="content" style="margin-left: -220px;">
-				<h2><b>In progress...</b></h2>
-				<p><!--
-					Impl&eacute;mentation de nombreuses nouvelles maps et organisation de celles-ci.<br>
-					Ajout d'un systeme d'arbre de talents.<br>
-					Correction d'un systeme de sauvegarde.<br>
-					Mise en place d'un installateur pour le jeu.<br>
-					Cr&eacute;ation d'un etui/d'une jaquette de pr&eacute;sentation du jeu.<br>
-					!-->
+				<h2><b>Peaufinage et algorithmes complexes</b></h2>
+				<p>
+					Impl&eacute;mentation des outils pour Rogner et redimensionner.<br>
+					Ajout d'un systeme de raccourcis: ctrl + Z, ctrl + Y, ctrl + V.<br>
+					Liaison des fen&ecirc;tres pop-up avec les fonctions et cr&eacute;ation de pinceaux diff&eacute;rents.<br>
+					Mise en place filtres complexes: Contraste, Luminosit&eacute;, Flou gaussien,et D&eacute;tourage.<br>
+					Cr&eacute;ation d'un rapport de soutenace, d'un rapport de projet et partiels finaux.<br>
+					<b>DEUXIEME SOUTENANCE</b>.
 				</p>
 			</div>
 		</div>
@@ -141,15 +125,13 @@
 			<div class="date">1e JUIN</div>
 			<i class="icon fa fa-gift"></i>
 			<div class="content" style="margin-right: -220px;">
-				<h2><b>In progress...</b></h2>
+				<h2><b>Ajouts de neuf outils d'&eacute;dition</b></h2>
 				<p>
-					<!--
-					Cr&eacute;ation d'un matchmaking fonctionnel pour le multijoueur.<br>
-					Synchronisation des d&eacute;placements et des attaques.<br>
-					Impl&eacute;mentations d'&eacute;l&eacute;ments relatifs au mode de Jeu.<br>
-					Synchronisation des musiques et des sons entre les clients.<br>
+					Cr&eacute;ation de la rotation gauche et droite de 90 degr&eacute;s.<br>
+					Synchronisation des fonctions des outils SDL sur GTK.<br>
+					Impl&eacute;mentations de l'inversion Horizontale / Verticale.<br>
+					Impl&eacute;mentations des outils: copier, couper, coller.<br>
 					Correction des bugs d&eacute;t&eacute;ct&eacute;s.<br>
-					!-->
 				</p>
 			</div>
 		</div>
@@ -157,16 +139,12 @@
 			<div class="date">16 MAI.</div>
 			<i class="icon fa fa-user"></i>
 			<div class="content" style="margin-left: -220px;">
-				<h2><b>In progress...</b></h2>
+				<h2><b>Personnalisation de l'interface</b></h2>
 				<p>
-					<!--
-					Impl&eacute;mentation d'un syst&egrave;me de combat et d'attaque &agrave; 3 armes et d'un Dash.<br>
-					Ajout du systeme raccourci d'activit&eacute; synchronis&eacute; avec discord.<br>
-					Ajout systeme de porte/cl&eacute; pour voyager &agrave; travers les niveaux.<br>
-					Impl&eacute;mentation des effets de lumiere.<br>
-					Impl&eacute;mentation de diff&eacute;rents ennemis comme le chevalier, l'archer...<br>
-					<b>DEUXIEME SOUTENANCE</b>.
-					!-->
+					Impl&eacute;mentation d'un syst&egrave;me de th&egrave;mes avec 4 possibilit&eacute;s.<br>
+					Ajout du syst&egrave;me raccourcis et pr&eacute;-visualisation des formes 2D.<br>
+					Ajout d'un th&egrave;me personnalisable en fonction d'une couleur choisie.<br>
+					Pause pour les examens (Partiels de mi-semestre).<br>
 				</p>
 			</div>
 		</div>
