--- a/documentation.html
+++ b/documentation.html
@@ -141,7 +141,7 @@
 							<i class="icon-trophy"></i>
 						</span>
 						<h3>Rapport de Projet</h3>
-						<p>Mise au point sur l'&eacute;tat final et les l'atteinte des objectifs de notre logiciel</p>
+						<p>Mise au point sur l'&eacute;tat final et l'atteinte des objectifs de notre logiciel</p>
 						<p><a href="pdf/Rapport_de_Projet___OELA.pdf" target="_blank" class="btn btn-primary">Lire</a></p>
 					</div>
 				</div>
