--- a/telechargement.html
+++ b/telechargement.html
@@ -91,8 +91,8 @@
 							<br><br><br>
 							<p><a href="dl_project/decolor.tar.gz" download="decolor.tar.gz" class="btn btn-default"><span class="textcouleurmarron">Version 1.0</span></a>
 							<a href="dl_project/decolor_lite.tar.gz" download="decolor_lite.tar.gz" class="btn btn-default"><span class="textcouleurmarron">Version Lite 1.0</span></a></p>
-							<p><a href="#" download="" class="btn btn-default"><span class="textcouleurmarron">Version 2.0</span></a>
-							<a href="#" download="" class="btn btn-default"><span class="textcouleurmarron">Version Lite 2.0</span></a></p>
+							<p><a href="dl_project/decolor2.tar.gz" download="" class="btn btn-default"><span class="textcouleurmarron">Version 2.0</span></a>
+							<a href="dl_project/decolor_lite2.tar.gz" download="" class="btn btn-default"><span class="textcouleurmarron">Version Lite 2.0</span></a></p>
 						</div>
 					</div>
 				</div>
