--- a/accueil.html
+++ b/accueil.html
@@ -495,15 +495,15 @@
 				<br><br>
 				<div class="row animate-box">
 					<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
-					<h2><span class="textcouleurbeige">Vid&eacute;o de la r&eacute;alisation de PABLO</span></h2>
-						<div class="gtco-video gtco-bg" style="background-image: url(images/pretzel.png);">
-						<a href="https://youtu.be/phSqqw9EPDI" class="popup-youtube"><i class="icon-video2"></i></a>
-						<div class="overlay"></div>
+					<h2><span class="textcouleurmarron">Vid&eacute;o de la r&eacute;alisation de PABLO</span></h2>
+						
 					</div>
 				</div>
 			</div>
+			<iframe width="1150" height="720" src="https://www.youtube.com/embed/phSqqw9EPDI" title="Time Lapse Pretzel - PABLO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 	</div>
+
 	
 	<div id="gtco-counter" class="gtco-bg gtco-counter" style="background-image:url(images/img_bg_05.jpg);">
 		<div class="gtco-container">
