fix(accueil.html, style.css): change current colors for smooth ones

--- a/accueil.html
+++ b/accueil.html
@@ -191,13 +191,13 @@
 							<div class="col-md-6">
 								<h2><span class="textcouleurmarron">Nos Valeurs</span></h2>
 
-								<p><B>Exp&eacute;rience avant tout.</B></p>
+								<p><span class="textcouleurmarron"><B>Exp&eacute;rience avant tout.</B></span></p>
 								<p>Durant ce Projet, le but principal est &eacute;videmment d'acqu&eacute;rir des connaissances dans la r&eacute;alisation d'un projet en groupe tout comme des connaissances en programmation.</p>
 
-								<p><B>Ex&eacute;cuter avec excellence.</B></p>
+								<p><span class="textcouleurmarron"><B>Ex&eacute;cuter avec excellence.</B></span></p>
 								<p>Nous nous concentrons l&agrave; o&ugrave; cela compte, nous accordons la priorit&eacute; &agrave; l'efficacit&eacute;. Nous fixons des objectifs ambitieux et continuons de nous am&eacute;liorer.</p>
 								
-								<p><B>Rester affam&eacute; ; rester humble.</B></p>
+								<p><span class="textcouleurmarron"><B>Rester affam&eacute; ; rester humble.</B></span></p>
 								<p>Nous abordons chaque probl&egrave;me avec optimisme, ambition et curiosit&eacute;. Nous c&eacute;l&eacute;brons nos victoires, apprenons de nos &eacute;checs et nous nous mettons au d&eacute;fi d'&eacute;voluer. Nous appr&eacute;cions les retours en tant qu'&eacute;l&eacute;ment essentiel de l'am&eacute;lioration.</p>
 							</div>
 						</div>
@@ -213,7 +213,7 @@
 								<p>OELA - "On Est L&agrave; Alors" est un groupe form&eacute; de quatre &eacute;tudiants en deuxi&egrave;me ann&eacute;e &agrave; l'EPITA de la promo 2025.<br>
 
 								Notre organisation coop&eacute;rative est constitu&eacute;e de mani&egrave;re temporaire autour d'un sujet unique, celui d'un logiciel d'&eacute;dition d'image.</p>
-								<p><B>Caract&eacuteristique du groupe</B></p>
+								<p><span class="textcouleurmarron"><B>Caract&eacuteristique du groupe</B></span></p>
 								<p>Notre groupe de projet est tr&egrave;s complet. Il se caract&eacute;rise par :<br><br>
 
 								- des comp&eacute;tences transversales provenant des diff&eacute;rentes personnes pr&eacute;sentes dans l'organisation;<br>
@@ -271,8 +271,9 @@
 				 <div class="py-5">
 					<div class="row animate-box">
 						<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
+							<br><br>
 							<h2><span class="textcouleurmarron">Avancements du Projet</b></span></h2>
-							<p>Premiers prototypes et outils</p>
+							<p><span class="textcouleurbeige"> Premiers prototypes et outils</span></p>
 						</div>
 					</div>
 					<div class="row animate-box">
@@ -326,7 +327,7 @@
 						<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
 							<br><br>
 							<h2><span class="textcouleurmarron">Fusion des algorithmes et de l'interface</span></h2>
-							<p><span class="textgris">Logos et int&eacute;gration des outils</span></p>
+							<p><span class="textcouleurbeige">Logos et int&eacute;gration des outils</span></p>
 						</div>
 					</div>
 					<div class="row animate-box">
@@ -381,7 +382,7 @@
 						<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
 							<br><br>
 							<h2><span class="textcouleurmarron">Approfondissement des algorithmes et de l'interface</span></h2>
-							<p><span class="textgris">Recherche algorithmique et int&eacute;gration des outils</span></p>
+							<p><span class="textcouleurbeige">Recherche algorithmique et int&eacute;gration des outils</span></p>
 						</div>
 					</div>
 
@@ -437,7 +438,7 @@
 						<div class="col-md-8 col-md-offset-2 text-center gtco-heading">
 							<br><br>
 							<h2><span class="textcouleurmarron">Derni&egrave;res am&eacute;liorations</span></h2>
-							<p><span class="textgris">Recherche algorithmique pour les filtres et trac&eacute;s</span></p>
+							<p><span class="textcouleurbeige">Recherche algorithmique pour les filtres et trac&eacute;s</span></p>
 						</div>
 					</div>
 
